plugins/kotlin-serialization/kotlin-serialization-compiler/testData/diagnostics/SerializableIgnored.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER,-UNUSED_VARIABLE

// FILE: test.kt
import kotlinx.serialization.*

<!PLUGIN_ERROR!>@Serializable<!>
interface INonSerializable

<!PLUGIN_ERROR!>@Serializable<!>
enum class ENonSerializable { A, B }
